# OpenCVDemo

./: build.gradle  settings.gradle
IDCard/: CMakeLists.txt  build.gradle
IDCard/src/androidTest/java/com/ant/idcard/: ExampleInstrumentedTest.java
IDCard/src/main/: AndroidManifest.xml
IDCard/src/main/res/layout/: activity_id_card_recognition.xml
IDCard/src/main/res/menu/: id_card.xml
IDCard/src/main/res/values/: ids.xml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ant/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/ant/opencvdemo/: App.java  MainActivity.java
app/src/main/java/com/ant/opencvdemo/face/: Camera2HelperFace.java  FaceActivity.java
app/src/main/java/com/ant/opencvdemo/idcard/: Camera2Helper.java  IDCardRecognitionActivity.java
app/src/main/java/com/ant/opencvdemo/jni/: ImageProcess.java
app/src/main/java/com/ant/opencvdemo/utils/: BitmapUtil.java  CompareSizesByArea.java  TessUtil.java
app/src/main/java/com/ant/opencvdemo/view/: AutoFitTextureView.java  FaceView.java  ViewfinderView.java
app/src/main/res/layout/: activity_face.xml  activity_id_card_recognition.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ant/opencvdemo/: ExampleUnitTest.java
face/: build.gradle
face/src/main/: AndroidManifest.xml
face/src/main/res/layout/: activity_face.xml
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
